--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/Ratn365/learn-mern#readme",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^5.13.16",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
